<resources>
    <string name="app_name">Simple SNS</string>
    <string name="title_home">Home</string>
    <string name="title_search">search</string>
    <string name="title_plus">plus</string>
    <string name="title_like">like</string>
    <string name="title_profile">profile</string>
    <string name="username">username</string>

    <!-- image_modify_menu -->
    <string name="menu_next">다음</string>
    <!-- image_post_menu -->
    <string name="menu_share">공유</string>

    <!-- BottomNavigation -->
    <string name="home">home</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="add">add</string>

    <!-- LoginActivity -->
    <string name="login_username">username or email</string>
    <string name="password">password</string>
    <string name="fullname">Full name</string>
    <string name="cpassword">Password</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="create_new_account">Create New Account</string>
    <string name="code">CODE</string>
    <string name="send_email">Send email</string>

    <!-- CameraFragment -->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="deny_permission">"If you reject permission,
        you can not use this service\n\n
        Please turn on permissions at [Setting] > [Permission]"</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- ImageRegisterActivity -->
    <string name="image_register_capture_first">first, capture or select image</string>
    <string name="image_register_cant_open_file">can not open file</string>

    <!-- ImageModifyActivity -->
    <string name="image_modify_filter">필터</string>
    <string name="image_modify_shape">수정</string>

    <string name="image_modify_shape_bright">밝기</string>
    <string name="image_modify_shape_compare">대비</string>
    <string name="image_modify_shape_temp">온도</string>
    <string name="image_modify_shape_saturation">채도</string>
    <string name="image_modify_shape_color">색</string>
    <string name="image_modify_shape_cloudy">배경 흐리게</string>
    <string name="image_modify_shape_highlight">하이라이트</string>
    <string name="image_modify_shape_blur">흐리게</string>
    <string name="image_modify_shape_mini">미니어쳐</string>
    <string name="image_modify_shape_structure">구조</string>
    <!-- ImagePostActivity -->
    <string name="image_post_title_hint">문구입력...</string>
    <string name="image_post_add_location">위치 추가</string>
    <string name="image_post_person_tag">사람 태그하기</string>
    <string name="image_post_other_media">다른 미디어에 게시</string>
    <string name="capital_search">SEARCH</string>
    <string name="update_profile">프로필 수정</string>
    <string name="todo">TODO</string>
    <string name="text">text</string>
    <string name="capital_like">LIKE</string>
    <string name="uploadImages">Set your image</string>

    <!-- Favprote -->
    <string-array name="favorite_titles">
        <item>Following</item>
        <item>My Post</item>
    </string-array>

    <!-- Search -->
    <string-array name="search_titles">
        <item>Hot</item>
        <item>People</item>
        <item>Tag</item>
        <item>Place</item>
    </string-array>
</resources>
