<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:title="@string/search"
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"/>

    <item
        android:title="@string/add"
        android:id="@+id/navigation_plus"
        android:icon="@drawable/baseline_control_point_24"/>

    <item
        android:title="@string/favorite"
        android:id="@+id/navigation_like"
        android:icon="@drawable/baseline_favorite_border_24"/>

    <item
        android:title="@string/profile"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_sentiment_satisfied_alt_24" />
</menu>
