<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/lena"
            android:padding="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/body_text_size"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:hint="@string/image_post_title_hint"
            android:drawableBottom="@color/defaultBlue"
            />
    </LinearLayout>

    <!--line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="위치기반 서비스 to do "
        android:textSize="@dimen/header2_size"
        android:lines="2"
        android:padding="5dp"/>

    <!--line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_post_person_tag"
        android:textSize="@dimen/header2_size"
        android:lines="2"
        android:padding="5dp"/>

    <!--line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header2_size"
        android:text="@string/image_post_other_media"
        android:lines="2"
        android:padding="2dp"/>

    <!--line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

</LinearLayout>
